Bug 269527[installer] support relative URI for installer descriptor and repositories